Bug 1608106 - fix drag space label contrast in dark lwthemes, r=nhnt11
Differential Revision: https://phabricator.services.mozilla.com/D59368

UltraBlame original commit: b102c4cb93aff35e931c4fa4555fbc5157847812

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -519,6 +519,30 @@ rgb
 important
 ;
 }
+.
+customizationmode
+-
+checkbox
+[
+disabled
+]
+:
+-
+moz
+-
+lwtheme
+{
+color
+:
+inherit
+;
+opacity
+:
+0
+.
+4
+;
+}
 #
 customization
 -
